# Philbrick

./: .gitignore  Agents.md  MULTICHANNEL_EXAMPLE.txt  Outline.md  README.md  SESSION_STATUS.md  STEP_1_7_SUMMARY.md  cli.py  demo_multichannel_scope.py  main.py  mcp_server.py  pyproject.toml
circuits/: differentiate_sine.yaml  harmonic.yaml
circuits/subcircuits/: differentiator.yaml
engine/: circuit.py  component.py  machine.py  patchbay.py  registry.py  signal.py  subcircuit.py  utils.py
engine/components/: generators.py  integrator.py  math.py  sources.py
engine/subcircuits/: __init__.py  attention.py  softmax.py
presets/: amplitude_modulation.yaml  damped_oscillator.yaml  harmonic_oscillator.yaml  lorenz.yaml  second_order_system.yaml  van_der_pol.yaml  voltage_ramp.yaml
tests/: test_app.py  test_attention.py  test_circuit.py  test_engine.py  test_generators.py  test_integrator.py  test_math.py  test_mcp_server.py  test_patchbay.py  test_phase3_components.py  test_scope.py  test_subcircuit_component.py
tui/: __init__.py
tui/widgets/: __init__.py  patches.py  scope.py
