[project]
name = "philbrick"
version = "0.1.0"
description = "Philbrick project"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
