[project]
name = "philbrick"
version = "0.1.0"
description = "Philbrick project"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "pytest",
    "pytest-asyncio",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "mcp>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "tui"]
